--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,12 @@ body {
     background-color: #404040;
 }
 
-.menu-line, .navigation-container:hover, .search-info-container, .copy-event-btn:hover, .ticket-event-btn:hover, .no-event, .x-line{    
+.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line, .event-category{    
     background-color: #808080;
 }
 
 /*Slightly less dark grey*/
-.event-map-container,.event-description-container, .copy-event-btn, .ticket-event-btn {
+.event-map-container,.event-description-container, .event-btn {
     background-color: #FFF;
 }
 
@@ -42,11 +42,11 @@ body {
 }
 
 /*Slightly less dark grey*/
-.menu-line, .navigation-container:hover, .search-info-container, .copy-event-btn:hover, .ticket-event-btn:hover, .no-event, .x-line{    
+.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line, .countdown-timer, .event-category{    
     background-color: #00ADB5;
 }
 
-.event-photo-container, .event-map-container,.event-description-container, .copy-event-btn, .ticket-event-btn {
+.event-photo-container, .event-map-container,.event-description-container, .event-btn {
     background-color: #FFF;
 }
 
@@ -446,30 +446,32 @@ html * {
     height: 15%;
     padding: 2.5% 0 2.5% 0;
 }
-
-.copy-event-btn, .ticket-event-btn {
+.event-btn, .countdown-timer, .event-category{
     width: 100%;
     height: 20%;
     box-shadow: 0px 5px 20px 0px #000;
     margin: auto;
     text-decoration: none;
     color: #000;
-    margin-top: 20%;
+    margin-top: 12.5%;
 }
 
-.copy-event-btn p, .ticket-event-btn p{
-    width: 75%;
+.event-btn p{
+    width: 50%;
     height: 100%;
     margin-top: 7.5%;
+    margin-left: 7.5%;
+    
 }
 
-.copy-event-btn *, .ticket-event-btn *{
+.event-btn *{
     float: left;
 }
 
 .event-btn-img {
     max-height: 100%;
     width:25%;
+    margin-left: 5%;
 }
 
 .no-event {
@@ -494,6 +496,12 @@ html * {
 
 .two-lines {
     line-height: 1.45em;
+}
+
+.event-category p{
+   color: #FFF;
+    text-align: center;
+    line-height: 2.5em;
 }
 
 /*END EVENT CSS*/
