--- a/css/forside.css
+++ b/css/forside.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
 }
-
+/*Slideshow CSS*/
 .slideshow-main-container {
     width: 100%;
     bottom: 0;
@@ -9,7 +9,7 @@ body {
 }
 
 .slideshow {
-    border: 2px solid darkgrey;
+    border: 2px solid #595959;
     width: 80%;
     bottom: 0;
     margin: 0 auto;
@@ -27,20 +27,21 @@ body {
 .slideshow-info {
     width: 30%;
     height: 100%;
-    background: grey;
-    opacity: .3;
+    background-color: rgba(50,50,50,0.2);
     padding: 8px;
     float: right;
     text-align: left;
     overflow: scroll;
+    box-shadow: inset 0 0 5px #000000;
 }
 
+/*SoMe CSS*/
 .social-fb {
     bottom: 0;
     padding: 10px;
     border: 2px;
     width: 50px;
-    height: 35px;
+    height: 40px;
     float: left;
 
 }
@@ -55,7 +56,7 @@ body {
     padding: 10px;
     border: 2px;
     width: 50px;
-    height: 35px;
+    height: 40px;
     display: inline-block;
     margin-left: 15%;
     
@@ -71,6 +72,7 @@ body {
     padding: 10px;
     border: 2px;
     width: 50px;
+    height: 40px;
     float: right;
     
 }
@@ -80,7 +82,7 @@ body {
     height: 100%;
 }
 
-
+/*Images CSS*/
 .image01 {
     position: relative;
     max-width: 100%;
@@ -120,19 +122,45 @@ body {
     height: 100%;
 } 
 
-
+/*Buttons CSS*/
 .button {
+    border-width: 0 3px 3px 0;
     position: absolute;
-    top: 50%;
-    right: 87.5%;
-    transform: translateY(1500%);
-    height: 20px;
-    background: blue;
-
+    top: 85%;
+    right: 90%;
+    background-color: darkgray;   
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+    padding: 4px 10px;
+    -webkit-border-radius: 5px;
 }
 
-.forward {
-    right: 10%;
+.next {
+    right:5.6%;
+}
+
+.button.grey{
+    background-image: -webkit-gradient(linear, left top, left bottom, 
+        from(#7d828c),
+        color-stop(0.5, #595959), 
+        color-stop(0.5, #404040), 
+        to(#222831));
+    border: solid 1px rgba(79, 79, 79, 0.75);
+}
+
+.button.grey:hover{
+    background-image: -webkit-gradient(linear, left top, left bottom, 
+        from(darkgray), 
+        color-stop(0.5, gray),
+        color-stop(0.5, dimgray),
+        to(lightgrey));
+}
+
+.button.back{
+    position: absolute;
+    padding-left: 5px;
+    margin-left: 8px;
 }
 
 body {
