--- a/css/forside.css
+++ b/css/forside.css
@@ -9,6 +9,7 @@ body {
 }
 
 .slideshow {
+    position: relative;
     border: 2px solid #595959;
     width: 80%;
     bottom: 0;
@@ -125,19 +126,26 @@ body {
 /*Buttons CSS*/
 .button {
     border-width: 0 3px 3px 0;
-    position: absolute;
-    top: 85%;
-    right: 90%;
+    /*position: absolute;*/
+    bottom: 15%;
+    right: 95%;
     background-color: darkgray;   
     color: #fff;
     text-decoration: none;
     display: inline-block;
     padding: 4px 10px;
     -webkit-border-radius: 5px;
+    opacity: 0.8;
 }
 
-.next {
-    right:5.6%;
+.button.next {
+    position: absolute;
+    right: 31.5%;
+}
+
+.button.back {
+    position: absolute;
+    left:0%;
 }
 
 .button.grey{
@@ -157,11 +165,11 @@ body {
         to(lightgrey));
 }
 
-.button.back{
-    position: absolute;
+/*.button.back{
+    position:absolute;
     padding-left: 5px;
     margin-left: 8px;
-}
+}*/
 
 body {
     margin: 0; 
