Added dlink icon and made changes to event-cal colours. Made changes to photo-viewer on forside.php/css

--- a/css/style.css
+++ b/css/style.css
@@ -37,16 +37,16 @@ body {
 }
 
 /*DARKEST*/
-.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button  {
+.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button, .countdown-timer, .event-category, .event-btn  {
     background-color: #222831;
 }
 
 /*Slightly less dark grey*/
-.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line, .countdown-timer, .event-category{    
+.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line{    
     background-color: #00ADB5;
 }
 
-.event-photo-container, .event-map-container,.event-description-container, .event-btn {
+.event-photo-container, .event-map-container,.event-description-container {
     background-color: #FFF;
 }
 
@@ -461,7 +461,7 @@ html * {
     height: 100%;
     margin-top: 7.5%;
     margin-left: 7.5%;
-    
+    color: #FFF;
 }
 
 .event-btn *{
@@ -487,7 +487,7 @@ html * {
 .no-event-text {
     color: #FFF;
     font-size: 2.5em;
-    
+
 }
 
 .one-line {
@@ -499,7 +499,7 @@ html * {
 }
 
 .event-category p, .countdown-timer p{
-   color: #FFF;
+    color: #FFF;
     text-align: center;
     line-height: 2.5em;
 }
