--- a/css/forside.css
+++ b/css/forside.css
@@ -4,18 +4,16 @@ body {
 /*Slideshow CSS*/
 .slideshow-main-container {
     width: 100%;
-    bottom: 0;
-    height: 300px;
+    height: 400px;
 }
 
 .slideshow {
     position: relative;
     border: 2px solid #595959;
-    width: 80%;
-    bottom: 0;
+    width: 1200px;
+    height: 100%;
     margin: 0 auto;
     overflow: hidden;
-    height: 300px;
     box-shadow: 0px 8px 30px 0px #000;
     
 }
@@ -29,58 +27,26 @@ body {
     width: 30%;
     height: 100%;
     background-color: rgba(50,50,50,0.2);
-    padding: 8px;
     float: right;
-    text-align: left;
-    overflow: scroll;
     box-shadow: inset 0 0 5px #000000;
 }
 
 /*SoMe CSS*/
-.social-fb {
-    bottom: 0;
-    padding: 10px;
-    border: 2px;
-    width: 50px;
-    height: 40px;
+.social {
+    height: 100%;
+    width: 33%;
     float: left;
-
 }
 
-.social-fb img {
-    width:100%;
-    height:100%;
+.social img{
+    max-width: 50%;
+    max-height: 50%;
+    margin-left: 25%;
 }
 
 .social-tw {
-    bottom: 0;
-    padding: 10px;
-    border: 2px;
-    width: 50px;
-    height: 40px;
-    display: inline-block;
-    margin-left: 15%;
-    
-}
-
-.social-tw img {
-    width: 100%;
-    height: 100%;
-}
-
-.social-email {
-    bottom: 0;
-    padding: 10px;
-    border: 2px;
-    width: 50px;
-    height: 40px;
-    float: right;
-    
-}
-
-.social-email img {
-    width: 100%;
-    height: 100%;
+    max-width: 60%;
+    max-height: 60%;
 }
 
 /*Images CSS*/
@@ -618,6 +584,13 @@ html * {
     padding: 2.5% 0 2.5% 0;
 }
 
+.slideshow-info-text {
+    height: 80%;
+    width: 100%;
+    text-align: center;
+}
 
-
-
+.slideshow-info-social {
+    height: 20%;
+    width: 100%;
+}
