--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ html * {
     z-index: 50;
     width: 50px;
     height: 55px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(13,16,19,.8);
     box-shadow: 0px 5px 2px 0px #000;
 }
 
