--- a/css/style.css
+++ b/css/style.css
@@ -505,3 +505,98 @@ html * {
 }
 
 /*END EVENT CSS*/
+
+.slideshow-container {
+    width:100%;
+    height: 400px;
+}
+
+.event-slide {
+    height: 100%;
+    width: 100%;
+}
+
+.event-slide img {
+    max-width: 100%;
+}
+
+.event-info-container {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width:33%;
+    height: 100%;
+    background-color: rgba(50,50,50,0.5);
+}
+
+.event-info-container *{
+    color: #FFF;
+}
+.event-info-container h2{
+    text-align: center;
+}
+
+.event-info-container p{
+    padding: 0, 5%, 0, 5%;
+}
+
+.event-info {
+    height: 80%;
+    width: 80%;
+    margin: auto;
+    overflow: auto;
+}
+
+.event-info-social {
+    height: 20%;
+    width: 100%;
+    border-top: 2px solid #222831;
+}
+
+.social-icon {
+    width: 25%;
+    height: 100%;
+    float: left;
+}
+
+.social-icon * {
+    max-width: 60%;
+    max-height: 60%;
+    margin-left: 12.5%;
+    margin-top: 15%;
+}
+
+.social-icon-middle {
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+}
+
+.slideshow-btn {
+    width: 50px;
+    height: 15%;
+    position: absolute;
+    top: 42.5%;
+    cursor: pointer;
+    background-color: rgba(50,50,50,0.8);
+    color: #FFF;
+    font-size: 3.1em;
+    z-index: 3;
+    line-height: 1.25em;
+    text-align: center;
+}
+
+.slideshow-right {
+    right: 0;
+}
+
+.slideshow-photo-container {
+    height:100%;
+    width:100%;
+}
+
+.slideshow-event-container {
+    position: relative;
+    width: 1100px;
+    height: 100%;
+    margin: auto;
+}
