--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -4,14 +4,16 @@
 
 h1  {
     font-family: monospace;
-    padding: 0.75em;
     text-align: left; 
+    padding: 0.75em;
 }
 
 p {
     font-family: monospace;
     margin-left: 20px;
     font-size: 1em;
+    text-align: left;
+
 }
 
 html, body {
@@ -22,7 +24,7 @@ html, body {
 .photo {
     height: 100%;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-repeat: round;
     background-attachment: fixed;
 }
 
@@ -30,7 +32,6 @@ html, body {
     height: 18em;
     background-color: white;
     text-align: left;
-    z-index: auto;
 }
 
 
@@ -46,33 +47,31 @@ html, body {
     background-image: url("../Bilder/westerdals3.jpg")
 }
 
-/* #mapVulkan {
-    height: 7em;
-    width: 10em;
-    margin-left: 75%;
-    margin-top: 1em;
-} */
+#mapVulkan {
+    height: 10em;
+    width: 20em;
+    
+    border: 0.1em solid black;
+    float: right;
+    margin-right: 1em;
+} 
 
 #mapFjerdingen {
-    height: 15em;
-    width: 25em;
-    position: fixed;
+    height: 10em;
+    width: 20em;
+    border: 0.1em solid black;
     float: right;
-    top: -5em;
     margin-right: 1em;
 }
 
-.mapBox {
-    background-color: black;
+#mapBrenneriveien {
+    height: 10em;
+    width: 20em;
+    border: 0.1em solid black;
+    float: right;
+    margin-right: 1em;
 }
 
-/*
-#mapBrenneriveien {
-    height: 7em;
-    width: 10em;
-    margin-left: 75%;
-   margin-top: 1em;
-}
 
 /*HEADER CSS*/
 .header-container, .logo-container, .menu-dropdown, option, .tip-container, .back-to-top-middle-area{
@@ -98,10 +97,8 @@ html, body {
     margin: auto;
     display: inline-flex;
     align-items: center;
-    /* box-shadow: 0px 0px 6px 1px #000; */
     position: fixed;
     z-index:3;
-    background-color: rgba(140, 127, 114, 0.2);
 }
 
 .menu-container {
@@ -128,17 +125,19 @@ html, body {
 }
 
 .filler {
-    background-color: transparent;
+   background-color: transparent;
 }
 
 .logo-container {
-    float:left;
+    float: left;
     height: 100%;
-    width: 300px;
+    width: 100%;
+    background-color: rgba(140, 127, 114, 0.2);
 }
 
-.logo-container *{
-    font-family: sans-serif;
+.logo-container * {
+    text-align: left;
+    font-family: monospace;
     color: #FFF;
     position: relative;
 }
@@ -167,8 +166,8 @@ html, body {
 
 .tag-line-container p{
     position: relative;
-    top: 10%;
-    color: #808080;
+    top: 30%;
+    color: #000000;
 }
 
 .menu-dropdown {
