--- a/css/style.css
+++ b/css/style.css
@@ -506,6 +506,8 @@ html * {
 
 /*END EVENT CSS*/
 
+
+/*START SLIDESHOW CSS*/
 .slideshow-container {
     width:100%;
     height: 400px;
@@ -600,3 +602,5 @@ html * {
     height: 100%;
     margin: auto;
 }
+
+/*END SLIDESHOW CSS*/
