--- a/css/omOss_midlertidig.css
+++ b/css/omOss_midlertidig.css
@@ -384,16 +384,10 @@ body {
     max-width: 25%;
     max-height: 91.5%;
     height: 91.5%;
-    background-color: rgba(50,50,50,0.8);;
+    background-color: rgba(50,50,50,0.8);
     font-family: sans-serif;
     font-size: 1em;
     color: white;
-    max-height: 100%;
 }
 
-   color: white; 
-   font: Sans-Serif; 
-   letter-spacing: -1px;  
-   background: rgb(0, 0, 0); /* fallback color */
-   background: rgba(0, 0, 0, 0.7);
-   padding: 10px; 
+   
