--- a/css/omOss_midlertidig.css
+++ b/css/omOss_midlertidig.css
@@ -364,30 +364,44 @@ body {
 
 
 .about-container {
-    position: absolute;
     width: 100%;
+    height: 715px;
 }
 
 .photoBox {
-    position: absolute;
-    top: 30px;
-    left: 240px;
-    max-width: 100%;
+    height: 100%;
+    width: 1300px;
+    margin: auto;
+    position: relative;
     
 }
 
-#infoText {
+#infoTextBox {
     position: absolute;
     top: 0;
-    left:0;
-    padding: 2em;
-    max-width: 25%;
-    max-height: 91.5%;
-    height: 91.5%;
+    left: 0;
+    height: 100%;
+    width: 33%;
     background-color: rgba(50,50,50,0.8);
     font-family: sans-serif;
     font-size: 1em;
-    color: white;
+    color: #FFF;
+    text-align: center;
 }
 
    
+#photo1 {
+    max-width: 100%;
+}
+
+
+
+#infoList {
+    text-align: left;
+}
+
+.infoText {
+    width: 80%;
+    height: 80%;
+    margin: auto;
+}
