--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,7 @@ html * {
 .slideshow-container {
     width:100%;
     height: 400px;
+    margin-top: 1%;
 }
 
 .event-slide {
@@ -585,6 +586,7 @@ html * {
     z-index: 3;
     line-height: 1.15em;
     text-align: center;
+    border: none;
 }
 
 .slideshow-right {
