--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,6 @@ html * {
 .event-info-social {
     height: 20%;
     width: 100%;
-    border-top: 2px solid #222831;
 }
 
 .social-icon {
@@ -571,7 +570,7 @@ html * {
     margin-top: 15%;
 }
 
-.social-icon-middle {
+.social-icon-placing {
 
     margin-left: 12.5%;
 }
