la til overflow hidden på event-photo-container

--- a/css/style.css
+++ b/css/style.css
@@ -398,7 +398,8 @@ html * {
     width: 20%;
 }
 .event-photo-container {
-    max-height: 100%;    
+    max-height: 100%; 
+    overflow: hidden;
     float: left;
     width: 20%;
 }
