--- a/css/style.css
+++ b/css/style.css
@@ -42,8 +42,12 @@ body {
 }
 
 /*Slightly less dark grey*/
-.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line{    
+.menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line{    
     background-color: #00ADB5;
+}
+
+.search-info-container {
+    background-color: #393E46;
 }
 
 .event-photo-container, .event-map-container,.event-description-container {
@@ -291,7 +295,7 @@ html * {
 
 .search-box {
     max-width: 100%;
-    width: 800px;    
+    width: 700px;    
     min-width: 800px;
     height: 25%;
     margin: auto;
@@ -306,13 +310,19 @@ html * {
 .search-criteria {
     height: 100%;
     width: 22.5%;
-    margin-left: 2.5%;
-    box-shadow: 2px 2px 5px 1px #000;
+    margin-left: %;
+    box-shadow: 0px 0px 0px 3px #00ADB5;    
     border: none;
+    border-radius: px;
+    color: #00ADB5;
+}
+
+.search-criteria:hover {
+    font-size: 1.1em;
 }
 
 .search-criteria, .search-button {
-    color: white;
+    background-color: whitesmoke;
     text-align: center;
     font-family: sans-serif;
     font-size: 1em;
@@ -322,13 +332,22 @@ html * {
 
 .search-button {
     position: relative;
-    width:17.5%;
-    top: 9%;
-    margin-left:5%;
-    height: 80%;
+    width:10%;
+    top: %;
+    margin-left:%;
+    height: 100%;
     line-height: 2em;
-    box-shadow: 2px 2px 5px 1px #000;
+    color: white;
+    background-color: #00ADB5;
+    box-shadow: 0px 0px 0px 3px #00ADB5;    
     border-style: none;
+    border-radius: px;
+}
+
+.search-button:hover {
+    
+    font-size: 1.1em;
+    box-shadow: 0px 0px 0px 3px #00ADB5;
 }
 
 .search-info-container {
@@ -337,7 +356,7 @@ html * {
     position: relative;
     margin: auto;
     top: 10%;
-    box-shadow: 3px 3px 10px 1px #000;   
+    box-shadow: 0px 1px 1px 0px #000;   
 
 }
 
@@ -511,7 +530,7 @@ html * {
 /*START SLIDESHOW CSS*/
 .slideshow-container {
     width:100%;
-    height: 400px;
+    height: 450px;
     margin-top: 1%;
 }
 
@@ -601,7 +620,7 @@ html * {
 
 .slideshow-event-container {
     position: relative;
-    width: 1100px;
+    width: 100%;
     height: 100%;
     margin: auto;
 }
