--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -17,6 +17,11 @@ h1  {
     font-family: monospace;
     width: 100%;
     font-size: 5em;
+    {transition: all .2s ease-in-out;}
+}
+
+#campusHeader:hover {
+    {transform: scale(1.1);}
 }
 
 .arrow {
