--- a/css/style.css
+++ b/css/style.css
@@ -725,3 +725,14 @@ html * {
 }
 
 /*END LOGIN PAGE CSS*/
+
+/*DB MANAGEMENT PAGE CSS*/
+.database-management-container {
+    width: 100%;
+    height: 300px;
+    background-color: blue;
+}
+
+.login-button:hover {
+    font-size: 1.1em;
+}
