--- a/css/style.css
+++ b/css/style.css
@@ -731,8 +731,17 @@ html * {
     width: 100%;
     height: 300px;
     background-color: blue;
+    display: none;
 }
 
 .login-button:hover {
     font-size: 1.1em;
+}
+
+.login-error {
+    width: 500px;
+    height:300px;
+    background-color: yellow;
+    margin: -550px auto;
+    display: none;
 }
