--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -32,6 +32,7 @@ h1  {
   height: 40px;
   background-image: url(../photos/down-arrow.png);
   background-size: contain;
+  cursor: pointer;
   
 }
 
@@ -76,14 +77,17 @@ h1  {
     transform: translateY(-15px); } }
 
 
-
-
-
-
-html, body, p {
+html, body {
     height: 100%;
-    font-size: 10
 }
+
+p {
+    text-align: justify;
+    font-size: 100%;
+    margin-left: 20px;
+    text-indent: 20px;
+}
+
 
 .photo {
     height: 100%;
@@ -94,9 +98,11 @@ html, body, p {
 }
 
 .text {
-    height: 40%;
+    height: 35%;
     background-color: white;
     text-align: left;
+    display: inline-table;
+    margin-bottom: 1em;
 }
 
 
@@ -112,29 +118,19 @@ html, body, p {
     background-image: url("../Bilder/westerdals3.jpg")
 }
 
-#mapVulkan {
-    height: 10em;
-    width: 20em;
-    border: 0.05em solid black;
-    float: right;
-    margin-right: 1em;
-} 
 
-#mapFjerdingen {
+
+#mapFjerdingen, #mapVulkan, #mapBrenneriveien {
     height: 10em;
     width: 20em;
     border: 0.05em solid black;
     float: right;
     margin-right: 1em;
+    margin-left: 1em;
+    margin-bottom: 1em;
+
 }
 
-#mapBrenneriveien {
-    height: 10em;
-    width: 20em;
-    border: 0.05em solid black;
-    float: right;
-    margin-right: 1em;
-}
 
 
 /*Consider using this orange - #FF9A00 for some standout pieces*/
@@ -271,6 +267,7 @@ html * {
     top: 25%;
     color: #00ADB5;
     font-size: 1em;
+    text-indent: inherit;
 
 }
 
