--- a/css/style.css
+++ b/css/style.css
@@ -778,24 +778,19 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
     text-align: center;
     line-height: 3.2em;
 }
+
+.login-message{
+    width: 90%;
+    height: 20%;
+    background-color: #FFF;
+    color: #000;
+    margin: -50% 0 0 5%;
+}
+
 /*END LOGIN PAGE CSS*/
 
 /*DB MANAGEMENT PAGE CSS*/
-.database-management-container {
-    width: 100%;
-    height: 300px;
-    background-color: blue;
-    display: none;
-}
 
-
-.login-error {
-    width: 500px;
-    height:300px;
-    background-color: yellow;
-    margin: -550px auto;
-    display: none;
-}
 
 
 
