--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -8,109 +8,63 @@ html, body {
 }
 
 h1  {
-    font-family: monospace;
+    font-family: sans-serif;
     text-align: left; 
     padding: 0.75em;
-    color: orange;
+    color: #00ADB5;
+    letter-spacing: -0.1em;
 }
 
 p {
+    font-family: sans-serif;
     text-align: justify;
     font-size: 100%;
     margin-left: 20px;
     text-indent: 20px;
+    letter-spacing: 0.1em;
+    color: white;
 }
 
-#campusHeader {
-    left: 0;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    font-family: sans-serif;
-    width: 100%;
-    font-size: 5em;
-}
-
-#campusHeader:hover {
-    {transform: scale(1.1);}
-}
-
-.arrow {
-  position: absolute;
-  left: 50%;
-  margin-left: -20px;
-  margin-top: 20px;
-  width: 40px;
-  height: 40px;
-  background-image: url(../photos/down-arrow.png);
-  background-size: contain;
-  cursor: pointer;
-  
-}
-
-.bounce {
-    -webkit-animation: bounce 2s;
-    animation: bounce 2s;
-}
-
-/* Scroll down indicator (bouncing) */
-@-webkit-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -webkit-transform: translateY(0); }
-  40% {
-    -webkit-transform: translateY(-30px); }
-  60% {
-    -webkit-transform: translateY(-15px); } }
-@-moz-keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -moz-transform: translateY(0); }
-  40% {
-    -moz-transform: translateY(-30px); }
-  60% {
-    -moz-transform: translateY(-15px); } }
-@keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    -webkit-transform: translateY(0);
-    -moz-transform: translateY(0);
-    -ms-transform: translateY(0);
-    -o-transform: translateY(0);
-    transform: translateY(0); }
-  40% {
-    -webkit-transform: translateY(-30px);
-    -moz-transform: translateY(-30px);
-    -ms-transform: translateY(-30px);
-    -o-transform: translateY(-30px);
-    transform: translateY(-30px); }
-  60% {
-    -webkit-transform: translateY(-15px);
-    -moz-transform: translateY(-15px);
-    -ms-transform: translateY(-15px);
-    -o-transform: translateY(-15px);
-    transform: translateY(-15px); } }
 
 #Fjerdingen, #Vulkan, #Brenneriveien {
-    font-family: monospace;
-    color: black;
-    font-size: 0.5em;
-    position: relative;
-    top: 2em;
-    transition: color 0.3s linear;
-    -webkit-transition: color 0.3s linear;
-    -moz-transition: color 0.3s linear;
-    background-color: white;
-    border: solid black 0.05em;
-    padding: 0.5em;
-    
+    position: absolute;
+    font-family: sans-serif;
+    color: white;
+    font-size: 2em;
+    transition: color 0.15s linear;
+    -webkit-transition: color 0.15s linear;
+    -moz-transition: color 0.15s linear;
+    background: #393E46;
+    padding: 0.3em;
+    border-radius: 1em;
+    z-index: 99;
+    top: 50%;
+    width: 10em;
+    text-align: center;
+    text-shadow: 1.5px 1.5px black;
+    border: 0.05em solid black;
+
 
 }
 
+#Fjerdingen {
+    left: 10%;;
+}
+
+#Vulkan {
+    left: 40%;
+}
+
+#Brenneriveien {
+    left: 70%;
+}
 
 #Fjerdingen:hover, #Vulkan:hover, #Brenneriveien:hover {
-    color: orange;
     cursor: pointer;
+    text-shadow: 1.5px 1.5px black;
+    border: 0.1em solid #00ADB5;
    
 }
-
 
 
 .photo {
@@ -119,14 +73,15 @@ p {
     background-repeat: round;
     background-attachment: fixed;
 
+
 }
 
 .text {
     height: 35%;
-    background-color: white;
+    background-color: #393E46;
     text-align: left;
     display: inline-table;
-    margin-bottom: 1em;
+
 }
 
 
@@ -222,7 +177,7 @@ html * {
     display: inline-flex;
     align-items: center;
     position: fixed;
-    z-index:3;
+    z-index:100;
     border: solid black 0.05em;
 }
 
