--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -252,14 +252,15 @@ html * {
 
 .menu-dropdown {
     display:none;
-    position: absolute;
+    position: fixed;
     width:200px;
     text-align: left;
     box-shadow: 0px 8px 30px 0px #000;
     top:90px;
     bottom:0;
     left: 0;
-    z-index: 99;
+    z-index: 100;
+    height: 250px;
 }
 
 .menu-dropdown a{
