--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -1,7 +1,7 @@
+
 * {
     margin: 0;
 }
-
 
 html, body {
     height: 100%;
@@ -25,38 +25,47 @@ p {
     color: white;
 }
 
+#buttonContainer {
+    height: auto;
+    width: 80%;
+    margin: auto;
+    margin-left: 20%;
+    
+}
+
 
 #Fjerdingen, #Vulkan, #Brenneriveien {
-    position: absolute;
     font-family: sans-serif;
     color: white;
     font-size: 2em;
-    transition: color 0.15s linear;
-    -webkit-transition: color 0.15s linear;
-    -moz-transition: color 0.15s linear;
+    width: 8em;
     background: #393E46;
     padding: 0.3em;
     border-radius: 1em;
     z-index: 99;
-    top: 50%;
-    width: 10em;
     text-align: center;
     text-shadow: 1.5px 1.5px black;
     border: 0.05em solid black;
+    transition: color 0.15s linear;
+    -webkit-transition: color 0.15s linear;
+    -moz-transition: color 0.15s linear;
+    margin-top: 40%;
+    display: inline-block;
+
 
 
 }
 
 #Fjerdingen {
-    left: 10%;;
+
 }
 
 #Vulkan {
-    left: 40%;
+    
 }
 
 #Brenneriveien {
-    left: 70%;
+    
 }
 
 #Fjerdingen:hover, #Vulkan:hover, #Brenneriveien:hover {
