--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,6 @@ option, .search-criteria {
     background-color: whitesmoke;
 }
 
-
-
-.event-photo-container, .event-map-container,.event-description-container {
-    background-color: #FFF;
-}
-
-.event-photo-container {
-    background-color: transparent;
-}
-
-
 /*HEADER CSS*/
 html * {
     font-family: sans-serif;
@@ -159,7 +148,6 @@ html * {
     bottom:0;
     left: 0;
     z-index: 99;
-    height: 255px;
 }
 
 .menu-dropdown a{
@@ -168,6 +156,7 @@ html * {
     text-decoration: none;
     font-size: 1em;
 }
+
 
 
 .icon {
@@ -325,13 +314,7 @@ html * {
     padding: .5em; 
 }
 
-#category {
-    border-style: none;
-    border-radius: 10px 0px 0px 10px;
-    text-align-last:center;
-}
-
-#category, .search-criteria {
+.search-criteria {
     text-align-last:center;
 }
 
@@ -343,7 +326,6 @@ html * {
     cursor: pointer;
 }
 
-
 .search-button {
     position: relative;
     width:10%;
@@ -353,7 +335,6 @@ html * {
     background-color: #00ADB5;
     box-shadow: 0px 0px 0px 4px #00ADB5;    
     border-style: none;
-    border-radius: 0 10px 10px 0px;
 }
 
 .search-button:hover {
@@ -371,7 +352,6 @@ html * {
 
 .search-info-header {
     text-align: center;
-    /*color: #FFF;*/
     color: #595959;
     position: relative;
     top:25%;
@@ -446,8 +426,8 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 }
 
 .event-photo-container, .event-map-container, .event-description-container {
-    border: 0.1%;
-    border-style: groove;
+    border-width: 1%;
+    border-style: solid;
     border-color: rgba(50,50,50,0.2);
 }
 
@@ -469,7 +449,6 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
     height: 100%;
     width: 1300px;
     margin: auto;
-    border-radius: 1%;
     padding: 2.5%;
     box-shadow: 0px 5px 20px 0px #000;
     background-color: rgba(50,50,50,0.2);
