--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,7 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
     background-color: rgba(50,50,50,0.5);
     margin: 2% auto;
     padding-bottom: 2%;
+    border: 1px solid #393E46;
 }
 
 .table-search {
@@ -792,15 +793,16 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 .table-info-container {
     width: 800px;
     height: 35px;
-    background-color: white;
+    background-color: whitesmoke;
     margin: 10px 100px;
+    border: 2px solid #393E46;
 }
 
 .table-name {
-    width: 998px;
+    width: 994px;
     height:100%;
-    background-color: whitesmoke;
-    border: 2px solid #00ADB5;
+    background-color: #222831;
+    border: 3px solid #222831;
     line-height: 2em;
     color: #00ADB5;
     text-align: center;
@@ -841,13 +843,27 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 
 .logout-btn {
     width: 100px;
-    height: 50px;
-    margin: 2% auto;    
-    line-height: 3em;
+    height: 30px;
+    margin: 2% auto; 
+    font-size: 1em;
+    line-height: 2em;
     text-align: center;
     color: #FFF;
     background-color: #222831; 
-    box-shadow: 0px 0px 4px 2px #00ADB5;
+    box-shadow: 0px 0px 1.5px 1.5px #00ADB5;
     border-style: none;
     border-radius: 10px;
 }
+
+.logout-btn:hover {
+    font-size: 1.1em;
+    line-height: 1.8em;
+}
+
+input[type=submit] {
+    width: 70%;
+    margin: 7px 20px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
