--- a/css/style.css
+++ b/css/style.css
@@ -843,21 +843,22 @@ select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
 
 .logout-btn {
     width: 100px;
-    height: 30px;
+    height: 25px;
     margin: 2% auto; 
-    font-size: 1em;
-    line-height: 2em;
+    font-size: 0.9em;
+    line-height: 1.9em;
     text-align: center;
     color: #FFF;
     background-color: #222831; 
     box-shadow: 0px 0px 1.5px 1.5px #00ADB5;
     border-style: none;
-    border-radius: 10px;
+    border-radius: px;
 }
 
 .logout-btn:hover {
-    font-size: 1.1em;
+    font-size: 0.95em;
     line-height: 1.8em;
+    box-shadow: 0px 0px 1.5px 1.5px #00ADB5;
 }
 
 .delete_tip, .delete_event {
