--- a/css/campusInfo.css
+++ b/css/campusInfo.css
@@ -10,7 +10,7 @@ h1  {
     padding: 0.75em;
     color: #00ADB5;
     letter-spacing: -0.1em;
-    margin-left: 1.25em;
+    margin-left: 1em;
 }
 
 p {
@@ -22,6 +22,7 @@ p {
     letter-spacing: 0.1em;
     color: white;
     font-weight: 150;
+    line-height: 130%;
 }
 
 #buttonContainer {
@@ -99,7 +100,7 @@ p {
     margin-bottom: 2.5em;
 }
 
-
+/* End of Campus-page CSS */
 
 /*Consider using this orange - #FF9A00 for some standout pieces*/
 
@@ -114,7 +115,7 @@ p {
     background-color: #404040;
 }
 
-.menu-line, .navigation-container:hover, .search-info-container, .event-btn:hover, .no-event, .x-line, .event-category{    
+.menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line, .event-category{    
     background-color: #808080;
 }
 
@@ -126,48 +127,39 @@ p {
 /*COLOURS 2*/
 
 /*Slightly darker grey*/
-.header-container, .logo-container, .menu-dropdown, option, .tip-container, .back-to-top-middle-area{
+.header-container, .logo-container, .menu-dropdown, .tip-container, .back-to-top-middle-area{
     background-color:#393E46;
 }
 
 /*DARKEST*/
-.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-criteria, .search-button, .language-button, .countdown-timer, .event-category, .event-btn  {
+.menu-container, .tip-bar, .form-button, .back-to-top-button, .search-button, .language-button, .countdown-timer, .event-category, .event-btn  {
     background-color: #222831;
 }
 
 /*Slightly less dark grey*/
-.menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line{    
+.menu-line, .navigation-container:hover, .event-btn:hover, .no-event, .x-line {    
     background-color: #00ADB5;
 }
 
-.search-info-container {
-    background-color: #393E46;
+/*White #### FIND HEXA COLOR FOR THIS*/ 
+option, .search-criteria {
+    background-color: whitesmoke;
 }
-
-.event-photo-container, .event-map-container,.event-description-container {
-    background-color: #FFF;
-}
-
-.event-photo-container {
-    background-color: transparent;
-}
-
-
 
 /*HEADER CSS*/
 html * {
-
     font-family: sans-serif;
 }
+
 .header-container {
     height:90px;
     width:100%;
     margin: auto;
     display: inline-flex;
     align-items: center;
-    position: fixed;
-    z-index:100;
-    border: solid black 0.05em;
+    box-shadow: 0px 0px 6px 1px #000;
+    position: relative;
+    z-index:3;
 }
 
 .menu-container {
@@ -232,24 +224,21 @@ html * {
 
 .tag-line-container p{
     position: relative;
-    top: 25%;
+    top: 11.5%;
     color: #00ADB5;
     font-size: 1em;
-    text-indent: inherit;
-
 }
 
 .menu-dropdown {
     display:none;
-    position: fixed;
+    position: absolute;
     width:200px;
     text-align: left;
     box-shadow: 0px 8px 30px 0px #000;
     top:90px;
     bottom:0;
     left: 0;
-    z-index: 100;
-    height: 255px;
+    z-index: 99;
 }
 
 .menu-dropdown a{
@@ -258,6 +247,7 @@ html * {
     text-decoration: none;
     font-size: 1em;
 }
+
 
 
 .icon {
@@ -393,9 +383,10 @@ html * {
 .search-box {
     max-width: 100%;
     width: 700px;    
-    min-width: 800px;
-    height: 25%;
-    margin-left: 14.125%;
+    min-width: 1200px;
+    height: 40%;
+    /*margin-left: 14.125%;*/
+    margin-left: ;
     position: relative;
     top: 30%;
 }
@@ -407,20 +398,21 @@ html * {
 .search-criteria {
     height: 100%;
     width: 22.5%;
-    box-shadow: 0px 0px 0px 3px #00ADB5;    
+    box-shadow: 0px 0px 0px 4px #00ADB5;    
     border: none;
     color: #00ADB5;
+    border-style: none;
+    padding: .5em; 
 }
 
-.search-criteria:hover {
-    font-size: 1.1em;
+.search-criteria {
+    text-align-last:center;
 }
 
 .search-criteria, .search-button {
-    background-color: whitesmoke;
     text-align: center;
     font-family: sans-serif;
-    font-size: 1em;
+    font-size: 2em;
     float: left;
     cursor: pointer;
 }
@@ -432,14 +424,13 @@ html * {
     line-height: 2em;
     color: #FFF;
     background-color: #00ADB5;
-    box-shadow: 0px 0px 0px 3px #00ADB5;    
+    box-shadow: 0px 0px 0px 4px #00ADB5;    
     border-style: none;
 }
 
 .search-button:hover {
-    
-    font-size: 1.1em;
-    box-shadow: 0px 0px 0px 3px #00ADB5;
+    font-size: 2.5em;
+    box-shadow: 0px 0px 0px 4px #00ADB5;
 }
 
 .search-info-container {
@@ -448,19 +439,30 @@ html * {
     position: relative;
     margin: auto;
     top: 10%;
-    box-shadow: 0px 1px 1px 0px #000;   
-
 }
 
 .search-info-header {
     text-align: center;
-    color: #FFF;
+    color: #595959;
     position: relative;
     top:25%;
     font-family: sans-serif;
-    font-size: 2.5em;
+    font-size: 3em;
     line-height: 0.4em;
 }
+
+
+
+select.search-criteria { /*Fjerner dropdown pil i chrome/firefox*/
+  -moz-appearance: none;
+  -webkit-appearance:none;
+  -webkit-border-radius: 0px;
+}
+
+select.search-criteria::-ms-expand { /*Fjerner dropdown pil i IE10*/
+    display: none;
+}
+
 /*SEARCH CSS ENDS*/
 
 
@@ -515,11 +517,18 @@ html * {
     width: 20%;
 }
 
+.event-photo-container, .event-map-container, .event-description-container {
+    border-width: 1%;
+    border-style: solid;
+    border-color: rgba(50,50,50,0.2);
+}
+
 
 .event-description-container {
     width: 40%;
     overflow: auto;
     overflow-x: hidden;
+    background-color: rgba(50,50,50,0.2);
 }
 
 .event-social-container {
@@ -533,7 +542,6 @@ html * {
     height: 100%;
     width: 1300px;
     margin: auto;
-    border-radius: 1%;
     padding: 2.5%;
     box-shadow: 0px 5px 20px 0px #000;
     background-color: rgba(50,50,50,0.2);
@@ -617,7 +625,320 @@ html * {
 
 /*END EVENT CSS*/
 
-#Vulkan {
-    border-left: 0px;
-    border-right: 0px;
+
+/*START SLIDESHOW CSS*/
+.slideshow-container {
+    width:100%;
+    height: 450px;
+    margin-top: 1%;
+}
+
+.event-slide {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.event-slide img {
+    max-width: 100%;
+}
+
+.event-info-container {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width:40%;
+    height: 100%;
+    background-color: rgba(50,50,50,0.5);
+}
+
+.event-info-container *{
+    color: #FFF;
+}
+.event-info-container h2{
+    text-align: center;
+}
+
+.event-info-container p{
+    padding: 0, 5%, 0, 5%;
+}
+
+.event-info {
+    height: 80%;
+    width: 80%;
+    margin: auto;
+    overflow: auto;
+}
+
+.event-info-social {
+    height: 20%;
+    width: 100%;
+}
+
+.social-icon {
+    width: 25%;
+    height: 100%;
+    float: left;
+}
+
+.social-icon * {
+    max-width: 60%;
+    max-height: 60%;
+    margin-left: 12.5%;
+    margin-top: 15%;
+}
+
+.social-icon-placing {
+
+    margin-left: 12.5%;
+}
+
+.slideshow-btn {
+    width: 40px;
+    height: 15%;
+    position: absolute;
+    top: 42.5%;
+    cursor: pointer;
+    background-color: rgba(50,50,50,0.8);
+    color: #FFF;
+    font-size: 3.1em;
+    z-index: 3;
+    line-height: 1.15em;
+    text-align: center;
+    border: none;
+}
+
+.slideshow-right {
+    right: 0;
+}
+
+.slideshow-photo-container {
+    height:100%;
+    width:100%;
+}
+
+.slideshow-event-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+}
+
+/*END SLIDESHOW CSS*/
+
+/*START ABOUT US CSS*/
+.about-container {
+    width: 100%;
+    height: 715px;
+    margin-top: 2%;
+    margin-bottom: 3%;
+}
+
+.photoBox {
+    height: 100%;
+    width: 1300px;
+    margin: auto;
+    position: relative;
+    top: 30px;
+    box-shadow: 1px 5px 20px 0px #000;
+}
+
+#infoTextBox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 33%;
+    background-color: rgba(50,50,50,0.8);
+    font-family: sans-serif;
+    font-size: 1em;
+    color: #FFF;
+    text-align: center;
+}
+
+#photo1 {
+    max-width: 100%;
+}
+
+#infoList {
+    text-align: left;
+}
+
+.infoText {
+    width: 80%;
+    height: 80%;
+    margin: auto;
+}
+/*END ABOUT US CSS*/
+
+/* START LOGIN PAGE CSS*/
+.login-link {
+    position: absolute;
+    bottom: 0;
+}
+
+.login-container {
+    margin: 4% auto;
+    width: 400px;
+    height: 600px;
+    background-color: #393E46;
+    box-shadow: 0px 0px 3px 3px #00ADB5; 
+}
+
+.login-container-header {
+    width: 100%;
+    height: 15%;
+}
+
+.login-container-header h2{
+    font-size: 3.1em;
+    color: #FFF;
+    text-align: center;
+    line-height: 2em;
+}
+
+.login-label {
+    font-size: 1em;
+    color: #FFF;
+    text-align: center;
+    margin-top: 10%;
+}
+
+.login-input {
+    font-size: 1em;
+    width:80%;
+    margin-left: 10%;
+    border: none;
+}
+
+.login-form {
+    width: 100%;
+    height:85%;
+    z-index: 5;
+}
+
+.login-button {
+    width: 80%;
+    height: 10%;
+    margin: 30% 10%;
+    background-color: #00ADB5;  
+    color: #FFF;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    
+    
+}
+
+.login-button:hover, .return-login-btn:hover {
+    font-size: 1.1em;
+}
+
+.return-login-btn {
+    width:80%;
+    height: 10%;
+    margin-top: 80%;
+    margin-left: 10%;
+    font-size: 1em;
+    background-color: #00ADB5;  
+    color: #FFF;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    line-height: 3.2em;
+}
+
+.login-message{
+    width: 90%;
+    height: 20%;
+    color: #FFF;
+    margin: -60% 0 0 5%;
+    text-align: center;
+    line-height: 1em;
+    font-size: 2.5em;
+}
+
+/*END LOGIN PAGE CSS*/
+
+/*DB MANAGEMENT PAGE CSS*/
+
+.database-management-container {
+    width: 1000px;
+    /*Needs to be removed later and change size depending on */
+    min-height: 200px;
+    background-color: rgba(50,50,50,0.5);
+    margin: 2% auto;
+    padding-bottom: 2%;
+}
+
+.table-search {
+    width: 150px;
+    height: 100%;
+    font-size: 1em;
+    box-shadow: none;
+    display: block;
+    border: 2px solid #00ADB5;
+}
+
+.table-info-container {
+    width: 800px;
+    height: 35px;
+    background-color: white;
+    margin: 10px 100px;
+}
+
+.table-name {
+    width: 998px;
+    height:100%;
+    background-color: whitesmoke;
+    border: 2px solid #00ADB5;
+    line-height: 2em;
+    color: #00ADB5;
+    text-align: center;
+}
+
+.table-info-container *{
+    float: left;
+}
+
+.table-info-column{
+    height: 100%;
+    line-height: 2em;
+    text-align: center;
+}
+
+.info-top-container {
+    width: 100%;
+    height: 35px;
+}
+
+.table-info {
+    width:100%;
+    margin-top: 35px;
+}
+
+.table-event_id {
+    width:100px;
+}
+
+.table-title {
+    width: 599px;
+    border-left: 1px solid #000;
+}
+
+.table-delete-row {
+    width: 100px;
+}
+
+.logout-btn {
+    width: 100px;
+    height: 50px;
+    margin: 2% auto;    
+    line-height: 3em;
+    text-align: center;
+    color: #FFF;
+    background-color: #222831; 
+    box-shadow: 0px 0px 4px 2px #00ADB5;
+    border-style: none;
+    border-radius: 10px;
 }
